salesforce-pubsub/1.0/modules/ROOT/pages/salesforce-pubsub-connector-message-tracking-example.adoc
= Salesforce Pub/Sub Connector 1.0 - Tracking Platform Events Example

One way you can use Salesforce Pub/Sub Connector is to track whether a Salesforce platform event is received and processed from MuleSoft. Using a combination of Salesforce and Mule runtime engine (Mule), it's possible to keep track of processed messages. 

For a detailed example of one approach to message tracking, see xref:https://docs.google.com/document/d/1NXLE93nzo7IRy4HSHsxh_InhhDJGv_m_xGo91VDyb3U/edit#heading=h.3xat2b92h1uu[Keeping Track of the Processed and Received Messages]

== Replay ID and MuleSoft Object Store

For this example of message tracking, it's important to understand the core concepts of the Salesforce Streaming API and MuleSoft object store.

=== Replay ID

On the Salesforce Event Bus, each published event message is assigned an opaque ID, which is contained in the `replay_id` attribute. The Replay ID field value is populated by the system when the event is delivered to subscribers and refers to the position of the event within the event stream. 

The event stream has a message durability of 72 hours for the high-volume platform events so, using the Replay ID, it is possible to receive a message from the stream within that period. 

The MuleSoft subscriber must carefully track which Replay ID is processed to ensure it doesn't miss or duplicate process events in case of down time or restart (either intentional or unintentional). 

To enable advanced Replay ID tracking to ensure that the event is received and processed correctly, you are given control over the replay behavior with the Salesforce Pub/Sub Connector in the connector configuration UI:

image::pubsub-channel-listener-config.png["Subscribe channel listener General properties configuration panel"]

This example configuration is using the *Replay id from object store* option for the *Replay option* property.

The following table shows the Replay ID options:

[%header%autowidth.spread]
|===
| Replay Option | Description | Usage
| ReplayId | The Subscriber receives all stored events after the event specified by its `replay_id` value, and new events. | Catch up on missed events after a certain event message, for example, after a connection failure. To subscribe with a specific Replay ID, save the Replay ID of the event message to retrieve stored events after, and then use it when you resubscribe.
| `-1` | If no replay option is specified, this is the default. The Subscriber receives new events that are broadcast after the client subscribes. | It is best to subscribe with the `-1` option to receive new event messages. To get earlier event messages, don't use this option. 
| `-2` | The Subscriber receives all events, including past events that are within the 72-hour retention window. | Catch up on missed events and retrieve all stored events, for example, after a connection failure. Using this option can slow performance if a large number of event messages are stored. 
|===

=== MuleSoft Object Store

Mule runtime engine (Mule) uses object stores to persist data for later retrieval. Mule uses object stores in various filters, routers, and other message processors that need to store states between messages. 

For CloudHub deployments, the free Object Store v2 limits usage to 10 transactions per second (TPS) per application. The premium add-on for Object Store v2 increases the limit to 100 TPS per app.

[[example-message-tracking]]
== Example of Tracking messages

One of the challenges of the Salesforce-provided event-based integration is to know whether a particular message is received and processed by the subscriber. To achieve this goal, additional logic is required. 

For details about the implementation logic for this approach to message tracking, see xref:https://docs.google.com/document/d/1NXLE93nzo7IRy4HSHsxh_InhhDJGv_m_xGo91VDyb3U/edit#heading=h.3xat2b92h1uu[Keeping Track of the Processed and Received Messages].

[[message-durability-and-replay]]
=== Message Durability and Message Replay

The Salesforce Event Bus stores messages for 72 hours. The receiver is responsible for keeping track of which messages are processed.

In the xref:https://docs.google.com/document/d/1NXLE93nzo7IRy4HSHsxh_InhhDJGv_m_xGo91VDyb3U/edit#heading=h.3xat2b92h1uu[Keeping Track of the Processed and Received Messages] example, the pub-sub receiver flow is designed so that it can reasonably recover after an intended or unintended restart. Specifically, the receiver is designed to pick up events from the last processed Replay ID only. 

== Batch Event Size 

A key feature of Salesforce Pub/Sub Connector is that it allows you to control the number of messages received and processed in a given period of time using the *Batch event size* (`BatcheventSize`) attribute of the *Subscribe Channel Listener* operation to specify the total number of events included in a server batch. 

=== Batch Event Size Example 

In a test case, 500 records were created in Salesforce using Apex code. After all the processing completed in Salesforce, the "delta" time between creating the log entry during record creation and the log entry from the confirmation message was analyzed and MuleSoft worker statistics were reviewed. 

In summary:

* Using `BatcheventSize=1` vs the maximum value of 100 triples the time until Salesforce records the processing, which is still in the area of milliseconds. 
* A CloudHub 0.1 vCore worker is sufficient to handle the load. There is no performance improvement when using a 0.2 core worker. 

For more details about this test case, see xref:https://docs.google.com/document/d/1NXLE93nzo7IRy4HSHsxh_InhhDJGv_m_xGo91VDyb3U/edit#heading=h.ormr8aypbrgp[BatcheventSize - How Does it Work?].

== See Also

* xref:https://docs.google.com/document/d/1NXLE93nzo7IRy4HSHsxh_InhhDJGv_m_xGo91VDyb3U/edit#heading=h.jv94keayzqia[Have my Published Salesforce Platform Events Been Received by My Mule App?]
* xref:https://developer.salesforce.com/docs/platform/pub-sub-api/guide/event-message-durability.html[Event Message Durability]
* xref:https://developer.salesforce.com/docs/platform/pub-sub-api/guide/expanded-event-bus.html[Pub/Sub API and the Expanded Event Bus]




